# code_samples_08_2022

./: README.md  conv4d.py  nn_pytorch.py
asy/: cnn_schem_flat.asy
ode_function/: CMakeLists.txt
ode_function/include/: func.h  ode.h
ode_function/src/: main.cpp  tests.cpp
